// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty list 1`] = `
<DocumentFragment>
  <div
    class="sc-VHjGu exzJCt"
  >
    <div>
      <input
        class="sc-gnOvAp boFJRV"
        placeholder="Search..."
        value=""
      />
    </div>
    <div
      class="sc-dQkurY ZFUqT"
    />
  </div>
</DocumentFragment>
`;

exports[`renders some items in a list 1`] = `
<DocumentFragment>
  <div
    class="sc-VHjGu exzJCt"
  >
    <div>
      <input
        class="sc-gnOvAp boFJRV"
        placeholder="Search..."
        value="blah"
      />
    </div>
    <div
      class="sc-dQkurY ZFUqT"
    >
      <div>
        NAME Andromeda Nebula
      </div>
      <div>
        M 71
      </div>
    </div>
  </div>
</DocumentFragment>
`;
